# bind-plane

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/: main.py  pyproject.toml
backend/app/: config.py  database.py  redis.py  session.py
backend/app/dependencies/: auth.py
backend/app/models/: user.py
backend/app/routers/: auth.py
backend/app/schemas/: auth.py
backend/app/services/: auth.py
backend/bind_plane/: __init__.py  cli.py
backend/bind_plane/api/: deps.py  main.py  pagination.py
backend/bind_plane/api/routes/: admin_command_profiles.py  admin_credentials.py  admin_imports.py  admin_users.py  audit.py  auth.py  releases.py
backend/bind_plane/core/: config.py
backend/bind_plane/db/: models.py  session.py
backend/bind_plane/domain/: __init__.py  ip.py  release.py
backend/bind_plane/schemas/: admin.py  audit.py  auth.py  pagination.py  release.py  users.py
backend/bind_plane/security/: credentials.py  passwords.py  tokens.py
backend/bind_plane/services/: bootstrap.py  command_profiles.py  release_preparation.py  switch_resolution.py
backend/bind_plane/tools/: __init__.py  netmiko_probe.py
backend/bind_plane/worker/: main.py  queue.py  release_executor.py  sessions.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  styles.css
frontend/src/api/: client.ts  hooks.ts  listParams.ts  queryKeys.ts  types.ts
frontend/src/i18n/: i18n.ts  labels.ts  resources.ts
frontend/src/lib/: utils.ts
migrations/: env.py
migrations/versions/: 20260504_0001_initial.py
openspec/: config.yaml
tests/backend/: conftest.py  test_config.py  test_health.py
(+80 files in other folders)
